https://github.com/brunch/brunch/issues/1349#issuecomment-217643093
- Fixed bug in another.js
- Removed modules.wrapper because it doesn't work and added require calls
- Implemented the build splitting
- Added another require to page2.js to test the build splitting

--- a/pages/page1.html
+++ b/pages/page1.html
@@ -3,9 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Page 1</title>
+	<script src="../deploy/vendor.js"></script>
 	<script src="../deploy/page1.js"></script>
 </head>
 <body>
-<div id="mountpoint"></div>
+	<div id="mountpoint"></div>
 </body>
+<script>require('resources/page1');</script>
 </html>
