--- a/pages/page2.html
+++ b/pages/page2.html
@@ -3,9 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Page 2</title>
+	<script src="../deploy/vendor.js"></script>
 	<script src="../deploy/page2.js"></script>
 </head>
 <body>
 	<div id="mountpoint"></div>
 </body>
+<script>require('resources/page2');</script>
 </html>
